# aoi

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  aoi.cpp  aoi.hpp
test/: CMakeLists.txt  main.cpp
